updated the title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,9 +28,9 @@
 </header>
 
 <section class="hero" id="home">
-    <h2>Your AI-powered Study Assistant</h2>
+    <h2>Your AI-powered Study Assistant </h2>
     <p>Upload PDFs, Summarize Notes, Generate Quizzes & Ask Questions all in one place.</p>
-    <button onclick="document.getElementById('upload').scrollIntoView({ behavior: 'smooth' })">Start Now</button>
+    <button onclick="document.getElementById('upload').scrollIntoView({ behavior: 'smooth' })">Get Started</button>
 </section>
 
 
